FV-127 Laden der summierten Zahldaten und Ergänzung um Spitzenstunde (#462)